--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script defer src="scrip.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="styles.css">
@@ -11,7 +12,7 @@
     <section class="showcase">
         <header>
 
-            <h2 class="logo">Travel</h2>
+            <h2 id="logo" class="logo">Travel</h2>
             <div class="toggle "></div>
         </header>
          <video src="explore.mp4" muted loop autoplay></video> 
